--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -1418,7 +1418,8 @@ which depends on the language used to formulate the constraint type.
 Some of the $\mathcal{R}$ constraint types, however, are also representable by classical constraint languages (e.g., 40\% are representable by ReSh).
 %(in total, 29 0f 32 $\mathcal{R}$ constraint types are representable by \emph{OWL 2 DL}). 
 OWL 2 profiles are restricted versions of OWL 2 that offer different trade-offs regarding expressivity vs. efficiency in reasoning. 
-We consider the OWL 2 profiles OWL 2 QL and OWL 2 DL, as OWL 2 QL is the profile with the highest performance and OWL 2 DL is the profile with the highest expressivity.
+We consider the two extreme OWL 2 profiles, which are OWL 2 QL and OWL 2 DL, as OWL 2 QL is the profile with the highest performance and OWL 2 DL is the profile with the highest expressivity while still being a DL.
+%since more expressive OWL Full does not correspond to any DL ).
 \emph{OWL 2 QL}, based on the \textit{DL-Lite} family of DL \cite{Artale2009,Calvanese2007}, is an OWL 2 profile which focuses on reasoning in the context of query answering with very large size of instance data. 
 \emph{OWL 2 DL} was standardized as a DL-like formalism with high expressivity, yet maintains decidability for main reasoning tasks.
 As a result of its expressive power, OWL 2 DL allows a large variety of sophisticated modeling capabilities for many application domains.
