--- a/paper/paper 2/dc-2015.tex
+++ b/paper/paper 2/dc-2015.tex
@@ -994,7 +994,7 @@ We think that this approach is suitable
   \item to enhance or rather establish the interoperability of different constraint languages.
 \end{enumerate}
 
-It is part of future work to finalize the implementation of all 81 constraint types in our \emph{RDF Validator}, to fully map constraint languages to RDF-CV (first and foremost DSP and OWL 2) and of course keep the framework in sync with the ongoing work in the working groups.
+It is part of future work to finalize the implementation of all 81 constraint types in our \emph{RDF Validator}, to fully map constraint languages to the RDF-CV (first and foremost DSP and OWL 2), and of course to keep the framework in sync with the ongoing work in the working groups.
 
 \bibliography{../../literature/literature}{}
 \bibliographystyle{apacite}
